Solved alignment issues

--- a/edwiserbridge/styles/setup-wizard.css
+++ b/edwiserbridge/styles/setup-wizard.css
@@ -114,6 +114,11 @@
     cursor: pointer;
 }
   
+.eb-tooltiptext{
+    font-family: sans-serif;
+    padding: 7px;
+}
+
 .eb-tooltip .eb-tooltiptext {
     visibility: hidden;
     width: 160px;
@@ -144,7 +149,9 @@
     visibility: visible;
 }
 
-
+.eb-setup-content a{
+    text-decoration: none;
+}
 
 .eb-setup-content{
     font-style: normal;
@@ -516,7 +523,8 @@
 
 .eb_setup_separator{
     display: flex;
-    padding-bottom: 5px; 
+    padding-bottom: 8px;
+    padding-top: 8px;
 }
 
 .eb_setup_hr{
@@ -618,6 +626,15 @@
     display: none;
 }
 
+.es-p-b-10{
+    padding-bottom: 10px;
+}
+
+.es-p-t-10{
+    padding-top: 10px;
+}
+
+
 /**/
 .accordion .fa-solid.fa-circle-question{
     color: #00A1A8;
@@ -631,7 +648,7 @@
     float: right;
     font-size: 20px !important;
     vertical-align: middle;
-    line-height: 32px;
+    line-height: 20px;
 }
 
 .accordion:hover i.fa-solid.fa-chevron-down,
@@ -668,7 +685,7 @@
 
 /* Style the accordion panel. Note: hidden by default */
 .panel {
-    padding: 0 60px;
+    padding: 20px 60px;
     background-color: white;
     display: none;
     overflow: hidden;
@@ -1023,12 +1040,16 @@ cursor: pointer;
     display: none;
 }
 
-.eb_setup_complete_card .eb_setup_copy{
+.eb_setup_complete_card .eb_setup_copy_icon{
     color: #666666;
     padding-top: 5px;
     width: 5%;
-    cursor: pointer;
+    /*cursor: pointer;*/
     color: #F98012;
+}
+
+.eb_setup_copy{
+    cursor: pointer;
 }
 
 .eb_setup_complete_card{
